--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ EMAIL_USER=60f0f795880794
 EMAIL_PASS=95a1a03d0ea158
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
+
+/*cloudinary*/
+CLOUDINARY_KEY=479834783558927
+CLOUDINARY_SECRET=VZJlLmgzQalDMCPg2WRJZvvfx5w
+CLOUDINARY_NAME=dcxxed5eh
