--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,6 @@ EMAIL_PORT=2525
 CLOUDINARY_KEY=479834783558927
 CLOUDINARY_SECRET=VZJlLmgzQalDMCPg2WRJZvvfx5w
 CLOUDINARY_NAME=dcxxed5eh
+
+/*permitir el acceso al frontend*/
+FRONTEND_URL=http://127.0.0.1:5173
