--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGO_URI=mongodb+srv://Camilo:cacp12345@cluster0.2itt2hi.mongodb.net/bdcerveceria?retryWrites=true&w=majority
 
+JWT_SECRET=palabrasupersecreta
+
 /*Nodemailer*/
 EMAIL_USER=60f0f795880794
 EMAIL_PASS=95a1a03d0ea158
