--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-hook-form": "^7.39.5",
+    "react-router-dom": "^6.4.3",
+    "sweetalert2": "^11.6.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
