--- a/backend/.env
+++ b/backend/.env
@@ -14,4 +14,4 @@ CLOUDINARY_SECRET=VZJlLmgzQalDMCPg2WRJZvvfx5w
 CLOUDINARY_NAME=dcxxed5eh
 
 /*permitir el acceso al frontend*/
-FRONTEND_URL=http://127.0.0.1:5173
+FRONTEND_URL=http://localhost:5173
